--- a/assets/fonts/k8x12.css
+++ b/assets/fonts/k8x12.css
@@ -1,6 +1,11 @@
 @font-face {
     font-family: 'k8x12';
-    src: url('k8x12.ttf') format('truetype');
+    src: url('k8x12.eot');
+    src: url('k8x12.eot?#iefix') format('embedded-opentype'),
+        url('k8x12.woff') format('woff'),
+        url('k8x12.ttf') format('truetype'),
+        url('k8x12.svg#k8x12') format('svg');
     font-weight: normal;
     font-style: normal;
 }
+
