--- a/www/css/index.css
+++ b/www/css/index.css
@@ -4,15 +4,26 @@ body {
   padding: 0;
 }
 
-#game-container {
+#canvas {
   background: url(../img/logo.png) no-repeat center top; /* 170px x 200px */
   background-position: center;
 }
 
-.gameBg {
+.game {
   position: fixed;
   height: 100%;
   width: 100%;
   overflow: hidden;
   background-color: #d3d3d3;
+}
+
+.frame {
+  background: url(../img/iphonex.png) no-repeat center top; /* 170px x 200px */
+  background-position: center;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  pointer-events: none;
+  z-index: 999;
 }
